Modified small things inorder to work properly and Have small bug ie: We have to enable the tls so that only we can establish the connection.

--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -66,7 +66,7 @@
             
         </div>
         <div >
-            <label class="pro_label">Unique Key: <span ><input type="text"  id="passInput" value="aio_uThs68F7phVYFewXHb2TcRiTJ3y2" class="pro_input"></span></label>
+            <label class="pro_label">Unique Key: <span ><input type="text"  id="passInput" value="aio_lLFz522YpqE1BmDQh1OrLtHrVd4G" class="pro_input"></span></label>
             
         </div>
         <div >
@@ -113,7 +113,7 @@
     </div>
 
   
-<div id="Before_connect_control">
+<div id="Control_View">
 
     <div class="row">
       <div class="column left" >
@@ -162,9 +162,6 @@
     <br>
     <hr>
   </div> 
-<p id="test1"></p>
-<p id="test2"></p>
-<p id="test3"></p>
 
 <button id="Setting_button" class="Settings" onclick="configuration_mqtt()">Settings</button>
 
