--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -2,10 +2,9 @@
 <html>
 
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, user-scalable=no,
+    <meta name="viewport" content="width=device-width, user-scalable=no,
     shrink-to-fit=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
-  <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="mystyle.css">
 
   <style>
     @import 'ui/css/evothings-app.css';
@@ -41,9 +40,14 @@
     <div id="ConnectView">
       <button type="button" id="clientConnectButton" onclick="CONNECT()" class="buttonc button1">Connect</button>
       <hr>
-      <p>Connection Status:<small id="Status_Property">Not Connected</small></p>
-      <hr>
+<!--      <p>Connection Status:<small id="Status_Property">Not Connected</small></p>
+  -->
+      <div class="row">
+        <div for="ONLINE_Click" id="ONLINE_Click" class="column1 left1" > <h3 > ONLINE MODE <br> <p id="ONLINEStatus">Connected</p>  </h3></div>
+        <div for="OFFLINE_Click" id="OFFLINE_Click" class="column1 right1" > <h3 > OFFLINE MODE  <br> <p id="OFFLINEStatus">Not Connected</p></h3> </div>
+      </div>
     </div>
+    <hr>
     
     <div id="Connection_Properties">
   <!--      <span> <h2>Connection Properties</h2> </span> -->
@@ -110,6 +114,16 @@
      </div>
 
      <hr>
+     <div id="TCP_SOCKET">
+      <div >
+        <label class="pro_label">Socket Port: <span><input  type="text" id="PORTInput" value="55555" class="pro_input"> 
+        </span></label>  
+      </div>
+      <div>
+        <label class="pro_label">Socket IP: <span><input type="text"  id="IPInput" value="192.168.43.15" class="pro_input"></span></label>
+      </div>
+     </div>
+     <hr>
     </div>
 
   
@@ -170,6 +184,10 @@
  
   <!-- Utility Javascript -->
   <script src="utility.js"></script>
+
+  <!-- Cordova related -->
+  <script src="cordova.js"></script>
+
     
 </body>
 </html>
